nginx-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: dev
spec:
  ingressClassName: nginx
  rules:
    - host: onmi.pro
      http:
        paths:
          - path: /api/registration/
            pathType: Prefix
            backend:
              service:
                name: verification-service
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: onmi-next-app
                port:
                  number: 80
